// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots auth / Login / LoginForm default 1`] = `
<div>
  <div
    className="login-form-grid"
  >
    <div
      className="login-first-item"
    >
      <p
        className="slide-up"
      >
        
      </p>
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group-input"
        >
          <label
            className="form-label login-form-label"
          >
             Email
          </label>
          <input
            className="form-input"
            id="login-email"
            name="password"
            onChange={[Function]}
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label login-form-label"
          >
            Password
          </label>
          <input
            className="form-input"
            id="login-password"
            name="password"
            onChange={[Function]}
            required={true}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <button
            className="button"
            disabled={false}
          >
            Login
          </button>
        </div>
        <div
          className="login-footer"
        >
          <a
            href="/signup"
            onClick={[Function]}
          >
            Register
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots auth / Login / LoginForm on error 1`] = `
<div>
  <div
    className="login-form-grid"
  >
    <div
      className="login-first-item"
    >
      <p
        className="slide-up"
      />
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group-input"
        >
          <label
            className="form-label login-form-label"
          >
             Email
          </label>
          <input
            className="form-input"
            id="login-email"
            name="password"
            onChange={[Function]}
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label login-form-label"
          >
            Password
          </label>
          <input
            className="form-input"
            id="login-password"
            name="password"
            onChange={[Function]}
            required={true}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <button
            className="button"
            disabled={false}
          >
            Login
          </button>
        </div>
        <div
          className="login-footer"
        >
          <a
            href="/signup"
            onClick={[Function]}
          >
            Register
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots auth / Login / LoginForm on loading 1`] = `
<div>
  <div
    className="login-form-grid"
  >
    <div
      className="login-first-item"
    >
      <p
        className="slide-up"
      >
        
      </p>
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group-input"
        >
          <label
            className="form-label login-form-label"
          >
             Email
          </label>
          <input
            className="form-input"
            id="login-email"
            name="password"
            onChange={[Function]}
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label login-form-label"
          >
            Password
          </label>
          <input
            className="form-input"
            id="login-password"
            name="password"
            onChange={[Function]}
            required={true}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <button
            className="button"
            disabled={true}
          >
            Loggin in...
          </button>
        </div>
        <div
          className="login-footer"
        >
          <a
            href="/signup"
            onClick={[Function]}
          >
            Register
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots auth / SignUp / SignUpForm default 1`] = `
<div>
  <section
    className="signup-form-grid"
  >
    <div
      className="signup-first-item"
    >
      <div
        className="bg-red white"
      />
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Name
          </label>
          <input
            className="form-input"
            id="sign-up-id"
            name="name"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Email
          </label>
          <input
            className="form-input"
            id="signup-email"
            name="email"
            onChange={[Function]}
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Password (6 minimum characters)
          </label>
          <input
            className="form-input"
            id="signup-password"
            name="password"
            onChange={[Function]}
            required={true}
            type="password"
            value=""
          />
        </div>
        <div>
          <button
            className="button"
            disabled={false}
          >
            Sign up
          </button>
        </div>
      </form>
    </div>
  </section>
</div>
`;

exports[`Storyshots auth / SignUp / SignUpForm on error 1`] = `
<div>
  <section
    className="signup-form-grid"
  >
    <div
      className="signup-first-item"
    >
      <div
        className="bg-red white"
      />
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Name
          </label>
          <input
            className="form-input"
            id="sign-up-id"
            name="name"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Email
          </label>
          <input
            className="form-input"
            id="signup-email"
            name="email"
            onChange={[Function]}
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Password (6 minimum characters)
          </label>
          <input
            className="form-input"
            id="signup-password"
            name="password"
            onChange={[Function]}
            required={true}
            type="password"
            value=""
          />
        </div>
        <div>
          <button
            className="button"
            disabled={false}
          >
            Sign up
          </button>
        </div>
      </form>
    </div>
  </section>
</div>
`;

exports[`Storyshots auth / SignUp / SignUpForm on loading 1`] = `
<div>
  <section
    className="signup-form-grid"
  >
    <div
      className="signup-first-item"
    >
      <div
        className="bg-red white"
      />
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Name
          </label>
          <input
            className="form-input"
            id="sign-up-id"
            name="name"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Email
          </label>
          <input
            className="form-input"
            id="signup-email"
            name="email"
            onChange={[Function]}
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group-input"
        >
          <label
            className="form-label"
          >
            Password (6 minimum characters)
          </label>
          <input
            className="form-input"
            id="signup-password"
            name="password"
            onChange={[Function]}
            required={true}
            type="password"
            value=""
          />
        </div>
        <div>
          <button
            className="button"
            disabled={true}
          >
            Loading...
          </button>
        </div>
      </form>
    </div>
  </section>
</div>
`;

exports[`Storyshots components / Input default 1`] = `
<div>
  <input
    className="form-input"
    id=""
    name="default"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots components / Navbar default 1`] = `
<div>
  <header>
    <div
      className="logo"
    >
      <img
        height={70}
        src="logo_transparent.png"
        width={150}
      />
    </div>
    <input
      className="nav-toggle"
      id="nav-toggle"
      type="checkbox"
    />
    <nav>
      <ul />
    </nav>
    <label
      className="nav-toggle-label"
      htmlFor="nav-toggle"
    >
      <span />
    </label>
  </header>
</div>
`;

exports[`Storyshots components / Navbar navbar with message 1`] = `
<div>
  <header>
    <div
      className="logo"
    >
      <img
        height={70}
        src="logo_transparent.png"
        width={150}
      />
    </div>
    <input
      className="nav-toggle"
      id="nav-toggle"
      type="checkbox"
    />
    <nav>
      <ul>
        <li>
          <a>
            Something
          </a>
        </li>
      </ul>
    </nav>
    <label
      className="nav-toggle-label"
      htmlFor="nav-toggle"
    >
      <span />
    </label>
  </header>
</div>
`;
